[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
hyper = { version = "0.14.23", features = ["full"]}
anyhow= "1.0.68"
tower-service = "0.3.0"
futures = "0.3.26"
